[tool.poetry]
name = "labelbabel"
version = "0.1.0"
description = ""
authors = ["dial-workable <aloupis@workable.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^12.0.1"
kopf = "^1.30.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.6"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
